Mobile sign up option

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                 <li><button class="btn"><img src="images/icon.png" alt="">Book</button></li>        
             </div>
             
+            <div class="account" >
+                <a href="#">Login</a>
+                <a href="#">Sign Up</a>
+            </div> 
         </header>
 
        <div class="header-content">
