Addition of authentication(login/sign Up) page

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <button class="btn"><img src="images/icon.png" alt="">Book</button>
                 <div class="dropdown-menu" id="dropdownMenu">
                     <div class="arrow"></div>
-                    <a href="#">Login</a>
-                    <a href="#">Sign Up</a>
+                    <a href="Authentication/login.html">Login</a>
+                    <a href="Authentication/signUp.html">Sign Up</a>
                 </div>   
             </nav>
             
@@ -52,8 +52,8 @@
             </div>
             
             <div class="account" >
-                <a href="#">Login</a>
-                <a href="#">Sign Up</a>
+                <a href="Authentication/login.html">Login</a>
+                <a href="Authentication/signUp.html">Sign Up</a>
             </div> 
         </header>
 
