--- a/Authentication/login.html
+++ b/Authentication/login.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="auth.css">
 </head>
 <body>
+    <div class="signOut">
+        <a href=""class="signOut"></i>Sign Out</a>
+    </div>
+    
     <div class="container">
         <form action="login_handler.php" method="post">
             <h2>Login</h2>
@@ -19,7 +23,7 @@
 
             <button type="submit">Login</button>
         </form>
-        <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+        <p style="color: white;">Don't have an account? <a href="signup.html">Sign Up</a></p>
     </div>
 </body>
 </html>
