--- a/Authentication/signUp.html
+++ b/Authentication/signUp.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="auth.css">
 </head>
 <body>
+    <div class="signOut">
+        <a href=""class="signOut"></i>Sign Out</a>
+    </div>
     <div class="container">
         <form action="signup_handler.php" method="post">
             <h2>Sign Up</h2>
@@ -21,7 +24,7 @@
 
             <button type="submit">Sign Up</button>
         </form>
-        <p>Already have an account? <a href="login.html">Login</a></p>
+        <p style="color: white;">Already have an account? <a href="login.html">Login</a></p>
     </div>
 </body>
 </html>
