--- a/Authentication/signUp.html
+++ b/Authentication/signUp.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="signOut">
-        <a href=""class="signOut"></i>Sign Out</a>
+        <a href="../index.html"class="signOut"></i>Sign Out</a>
     </div>
     <div class="container">
         <form action="signup_handler.php" method="post">
