--- a/Authentication/login.html
+++ b/Authentication/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="signOut">
-        <a href="../index.html"class="signOut"></i>Sign Out</a>
+        <a href="../index.html"class="signOut"></i>Exit</a>
     </div>
     
     <div class="container">
