--- a/Authentication/login.html
+++ b/Authentication/login.html
@@ -13,7 +13,7 @@
     </div>
     
     <div class="container">
-        <form action="login_handler.php" method="post">
+        <form action="" method="post">
             <h2>Login</h2>
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
