--- a/Authentication/signUp.html
+++ b/Authentication/signUp.html
@@ -11,7 +11,7 @@
         <a href="../index.html"class="signOut"></i>Exit</a>
     </div>
     <div class="container">
-        <form action="signup_handler.php" method="post">
+        <form action="" method="post">
             <h2>Sign Up</h2>
             <label for="username">Username</label>
             <input type="text" id="username" name="username" required>
