--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- ||| css link ||| -->
     <link rel="stylesheet" href="styles.css">
     <!--Icon packs-->
-    <script src="https://kit.fontawesome.com/c4254e24a8.js"></script>
+    <script src="https://kit.fontawesome.com/7f33252b4f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
